premiere version terminé

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#presentation">Présentation</a></li>
                     <li><a href="#competences">Compétences</a></li>
                     <li><a href="#projets">Projet</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a class="reseau" href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
