--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>C.M DevFront</title>
-        <link href=".ressource/css/style.css" type="text/css" rel="stylesheet">
+        <link href="./ressource/css/style.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
