--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
             </div>
         </main>
         <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>-->
-        <script src="effet.js"></script>
+        <script src="./j.script/effet.js"></script>
     </body>
 </html>
